# f1tenth_algorithms

./: README.md
auto_bringup/: CMakeLists.txt  package.xml
auto_bringup/config/: auto_example.yaml
auto_bringup/launch/: example.launch.py
auto_py/: package.xml  setup.cfg  setup.py
auto_py/auto_py/: base.py  braking.py  lidar_publisher.py  lidar_subscriber.py  roomba_mode.py  straight.py  wiggle.py
