<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_py</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="spencer@shally.dev">Spencer Hallyburton</maintainer>
  <license>MIT</license>

  <depend>python3-sklearn</depend>

  <depend>ackermann_msgs</depend>
  <depend>joy</depend>
  <depend>joy_teleop</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
